--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"netlify deploy --prod",
+    "build":"npm i",
     "start": "nodemon index.js"
   },
   "keywords": [],
